[project]
name = "ai-trip-planner"
version = "0.1.0"
description = "AI-powered travel planning agent using LangGraph and free APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-groq>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "groq>=0.29.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "streamlit>=1.44.0",
    "requests>=2.32.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.0",
    "pandas>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
